--- a/Weather/app/src/main/res/layout/activity_main.xml
+++ b/Weather/app/src/main/res/layout/activity_main.xml
@@ -3,22 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20dp">
+
+    </android.support.v4.view.ViewPager>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#000000"
+        android:background="@color/transparent"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:gravity="center_vertical">
-
-        <ImageView
-            android:id="@+id/imv_city"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:layout_alignParentLeft="true"
-            android:src="@mipmap/city_icon"/>
 
         <ImageView
             android:id="@+id/imv_setting"
@@ -28,10 +30,15 @@
             android:src="@mipmap/setting_icon"/>
     </RelativeLayout>
 
-    <android.support.v4.view.ViewPager
+    <LinearLayout
+        android:id="@+id/ll_point"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
 
-    </android.support.v4.view.ViewPager>
+    </LinearLayout>
 
 </FrameLayout>
