--- a/Weather/app/src/main/res/layout/item_daily_weather_view.xml
+++ b/Weather/app/src/main/res/layout/item_daily_weather_view.xml
@@ -37,13 +37,13 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imv_weather_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:src="@mipmap/weather_code_0"/>
 
             <TextView
