--- a/Weather/app/src/main/res/layout/fragment_weather.xml
+++ b/Weather/app/src/main/res/layout/fragment_weather.xml
@@ -50,6 +50,38 @@
         android:orientation="vertical"
         android:layout_weight="2">
 
+        <com.caozheng.weather.widget.DailyWeatherView
+            android:id="@+id/daily_weather1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+        </com.caozheng.weather.widget.DailyWeatherView>
+
+        <com.caozheng.weather.widget.DailyWeatherView
+            android:id="@+id/daily_weather2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+        </com.caozheng.weather.widget.DailyWeatherView>
+
+        <com.caozheng.weather.widget.DailyWeatherView
+            android:id="@+id/daily_weather3"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+        </com.caozheng.weather.widget.DailyWeatherView>
+
+        <com.caozheng.weather.widget.DailyWeatherView
+            android:id="@+id/daily_weather4"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+        </com.caozheng.weather.widget.DailyWeatherView>
+
     </LinearLayout>
 
 </LinearLayout>
