--- a/Weather/app/src/main/res/values/colors.xml
+++ b/Weather/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
 
     <color name="transparent">#00000000</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
     <color name="white_80">#F5F5F5</color>
     <color name="black_50">#50000000</color>
 </resources>
