--- a/Weather/app/src/main/res/values/styles.xml
+++ b/Weather/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:statusBarColor">@color/app_status_bar_color</item>
     </style>
 
     <declare-styleable name="DailyWeatherView">
