--- a/Weather/app/src/main/res/layout/item_listview_city.xml
+++ b/Weather/app/src/main/res/layout/item_listview_city.xml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<com.caozheng.weather.widget.SwipeListLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:background="@color/white">
 
-    <RelativeLayout
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:orientation="horizontal" >
+
+    <TextView
+        android:id="@+id/tv_delete"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/red"
+        android:gravity="center"
+        android:textSize="17sp"
+        android:textColor="@color/white"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:text="删除" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:padding="15dp"
+        android:orientation="horizontal" >
+
+    <TextView
+        android:id="@+id/tv_city_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:layout_alignParentLeft="true"
+        android:text="浦东"
+        android:textSize="23sp" />
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_city_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:textSize="23sp"
-            android:text="浦东"/>
-
-        <TextView
-            android:id="@+id/tv_city_temp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:textSize="23sp"
-            android:text="17°"/>
-    </RelativeLayout>
-
-</LinearLayout>
+</com.caozheng.weather.widget.SwipeListLayout>
