--- a/Weather/app/src/main/res/values/colors.xml
+++ b/Weather/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="app_top_color">#03A9F4</color>
+    <color name="app_status_bar_color">#03A9F4</color>
+
     <color name="primary">#03A9F4</color>
     <color name="primary_dark">#0288D1</color>
     <color name="primary_light">#B3E5FC</color>
@@ -16,6 +19,7 @@
     <color name="transparent">#00000000</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="red">#FF4500</color>
     <color name="white_80">#F5F5F5</color>
     <color name="black_50">#50000000</color>
 </resources>
